Clear browsing data from ContentSuggestionService only if exists.

Currently, we instantiate the service in BrowsingDataRemover even when
it does not exist, yet. This means that we instantiate it on non-android
platforms, in unit-tests, etc.

This CL changes the logic so that the service is accessed only if it has
been created previously. This way, the BrowsingDataRemover respects the
start-up logic that decides whether to create the service or not.

BUG=647222

Review-Url: https://codereview.chromium.org/2342673004
Cr-Commit-Position: refs/heads/master@{#419141}

Former-commit-id: 9d1e504520b774c0a6f24920f730748053c4b2b2